--- a/frontend/styles/components/siteLayoutContent.scss
+++ b/frontend/styles/components/siteLayoutContent.scss
@@ -14,6 +14,5 @@
     padding: 0 10px;
     height: auto;
     background-color: #fafafa;
-    overscroll-behavior-y: contain;
   }
 }
